# prototypes

accelerate-python/cpp-pybind11/: CMakeLists.txt  lib.cpp  test_lib.py
socket/: cfg.py  client.py  server.py
